--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android:flexbox:0.2.7'
 
-
+    compile 'com.ss.bannerslider:bannerslider:1.8.0'
 
 }
